--- a/AffectiveComputingAI/FaceRecognition.ipynb
+++ b/AffectiveComputingAI/FaceRecognition.ipynb
@@ -286,21 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in df.iterrows():\n",
+    "def flat_face_landmarks(face_landmarks_list):\n",
+    "    \n",
+    "    landmarks_array = []\n",
+    "    for face_landmarks in face_landmarks_list:\n",
+    "        landmarks = []\n",
+    "        for facial_feature in face_landmarks.keys():\n",
+    "            landmarks.extend(face_landmarks[facial_feature])\n",
+    "        landmarks_array.append(landmarks)\n",
+    "    return np.array(landmarks_array)\n",
     "\n",
-    "    coordenadas = []\n",
-    "    #face_landmarks = row['face_landmarks']\n",
-    "    face_lm = row['face_landmarks']\n",
-    "    for landmark in face_lm:\n",
-    "        for _, puntos in landmark.items():\n",
-    "            coordenadas.extend(puntos)\n",
-    "    \n",
-    "    \n",
-    "    df.at[index, 'face_landmarks'] = coordenadas"
+    "# Sobrescribir la columna \n",
+    "df['face_landmarks'] = df['face_landmarks'].apply(flat_face_landmarks)"
    ]
   },
   {
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,35 +347,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[[[165, 165, 162], [165, 166, 161], [165, 166,...</td>\n",
-       "      <td>[(62, 83), (62, 88), (62, 92), (63, 97), (64, ...</td>\n",
+       "      <td>[[[62, 83], [62, 88], [62, 92], [63, 97], [64,...</td>\n",
        "      <td>[[[[160 162 161], [160 162 161], [160 162 161]...</td>\n",
        "      <td>bored</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[[[164, 166, 161], [165, 167, 162], [164, 166,...</td>\n",
-       "      <td>[(62, 83), (62, 87), (63, 92), (63, 97), (64, ...</td>\n",
+       "      <td>[[[62, 83], [62, 87], [63, 92], [63, 97], [64,...</td>\n",
        "      <td>[[[[160 162 160], [161 162 161], [160 161 160]...</td>\n",
        "      <td>bored</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[[[165, 165, 163], [165, 165, 163], [164, 165,...</td>\n",
-       "      <td>[(63, 82), (63, 87), (63, 91), (63, 96), (65, ...</td>\n",
+       "      <td>[[[63, 82], [63, 87], [63, 91], [63, 96], [65,...</td>\n",
        "      <td>[[[[159 161 158], [160 162 159], [161 162 160]...</td>\n",
        "      <td>bored</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[[[165, 166, 162], [165, 165, 163], [165, 165,...</td>\n",
-       "      <td>[(63, 83), (63, 87), (63, 92), (63, 97), (64, ...</td>\n",
+       "      <td>[[[63, 83], [63, 87], [63, 92], [63, 97], [64,...</td>\n",
        "      <td>[[[[159 161 158], [161 163 160], [155 157 154]...</td>\n",
        "      <td>bored</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[[[165, 166, 161], [166, 167, 162], [165, 167,...</td>\n",
-       "      <td>[(63, 82), (63, 87), (63, 91), (63, 96), (65, ...</td>\n",
+       "      <td>[[[63, 82], [63, 87], [63, 91], [63, 96], [65,...</td>\n",
        "      <td>[[[[160 162 159], [161 163 161], [152 154 151]...</td>\n",
        "      <td>bored</td>\n",
        "    </tr>\n",
@@ -391,11 +392,11 @@
        "4  [[[165, 166, 161], [166, 167, 162], [165, 167,...   \n",
        "\n",
        "                                      face_landmarks  \\\n",
-       "0  [(62, 83), (62, 88), (62, 92), (63, 97), (64, ...   \n",
-       "1  [(62, 83), (62, 87), (63, 92), (63, 97), (64, ...   \n",
-       "2  [(63, 82), (63, 87), (63, 91), (63, 96), (65, ...   \n",
-       "3  [(63, 83), (63, 87), (63, 92), (63, 97), (64, ...   \n",
-       "4  [(63, 82), (63, 87), (63, 91), (63, 96), (65, ...   \n",
+       "0  [[[62, 83], [62, 88], [62, 92], [63, 97], [64,...   \n",
+       "1  [[[62, 83], [62, 87], [63, 92], [63, 97], [64,...   \n",
+       "2  [[[63, 82], [63, 87], [63, 91], [63, 96], [65,...   \n",
+       "3  [[[63, 83], [63, 87], [63, 92], [63, 97], [64,...   \n",
+       "4  [[[63, 82], [63, 87], [63, 91], [63, 96], [65,...   \n",
        "\n",
        "                                        face_closeup  label  \n",
        "0  [[[[160 162 161], [160 162 161], [160 162 161]...  bored  \n",
@@ -405,7 +406,7 @@
        "4  [[[[160 162 159], [161 163 161], [152 154 151]...  bored  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
